remove dialect unnecessary warning

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,4 @@ spring.datasource.username=${SPRING_DEMO_DB_USERNAME}
 spring.datasource.password=${SPRING_DEMO_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=truew
+spring.jpa.properties.hibernate.format_sql=true
